--- a/src/app/events/add-event/add-event.component.html
+++ b/src/app/events/add-event/add-event.component.html
@@ -1,4 +1,4 @@
-
+<app-nav-bar></app-nav-bar>
 
 
      <div >
@@ -77,7 +77,6 @@
                
 
                 <div class="form-group col-md-12"*ngIf="destination">
-                    <label for="email" class="sr-only">DepartmentId</label>
                     <input class="form-control" formControlName="Destination" id="Destination" required>
                     <label >Destination of Event</label>
                 </div> 
