--- a/src/app/events/view-event-page/view-event-page.component.html
+++ b/src/app/events/view-event-page/view-event-page.component.html
@@ -7,18 +7,7 @@
 <section>
     <div class="container">
       <div class="card">
-        <div class="row">
-          <div class="col-md-6 col-sm-10">
-            <br>
-              <h1 id="h1" class="card-title">{{event.eventTitle}}</h1>
-          </div>
-          <div class="col-md-6 col-sm-10" >
-            <br>
-              <h4 id="h2" class="card-text">Date: {{event.startDate | date: 'dd/MM/yyyy'}}</h4>
-              <h3 id="h2" *ngIf="destination"class="card-text">Destination: {{event.destination}}</h3>
-              <h3 id="h2" *ngIf="venue" class="card-text">Venue: {{event.venue}}</h3>
-          </div>
-        </div>
+        
   
         <div class="row">           
           <div class="col-md-6">
@@ -26,12 +15,17 @@
             <div class="card-block" id="dis">
               <br/>
              
-              <p class="card-text">{{event.eventDescription}}</p>
+              
               
             
-
-              <p *ngIf="closingDate" class="card-text">Registration Closing Date: {{event.closingDate | date: 'dd/MM/yyyy'}}</p>
-              <p class="card-text" *ngIf="endDate">EndDate of Event: {{event.endDate | date: 'dd/MM/yyyy'}}</p>
+              <h1 class="card-title">{{event.eventTitle}}</h1>
+              <br/>
+              <h5 class="card-text">{{event.eventDescription}}</h5>
+                  <h5 id="h2" class="card-text">Date: {{event.startDate | date}}</h5>
+                  <h5 id="h2" *ngIf="destination"class="card-text">Destination: {{event.destination}}</h5>
+                  <h5 id="h2" *ngIf="venue" class="card-text">Venue: {{event.venue}}</h5>
+              <p *ngIf="closingDate" class="card-text">Registration Closing Date: {{event.closingDate | date}}</p>
+              <p class="card-text" *ngIf="endDate">EndDate of Event: {{event.endDate | date}}</p>
               <p class="card-text" *ngIf="isFamilyMembersAllowed">Whether Family Members Allowed: {{event.isFamilyMembersAllowed}}</p>
               <p class="card-text" *ngIf="liquor">Liquor: {{event.liquor}}</p>
               <p class="card-text" *ngIf="numberOfTeams">Number of Teams: {{event.numberOfTeams}}</p>
@@ -61,9 +55,9 @@
       <div id="form" class="col-sm-9" *ngIf="this.form===null||!this.register">
       </div>
       <div class="col-sm-1">
+          <button type="button" class="btn btn-link"(click)="addRegistrationForm()" *ngIf="this.form===null">Add Registration Form</button>
           <button type="button" class="btn btn-link"(click)="updateEvent()">Update Event</button>
-         <!-- <button type="button" class="btn btn-link" (click)="deleteEmployee(content)" *ngIf="this.form!=null">Delete Registered Employee</button>-->
-          <button type="button" class="btn btn-link" (click)="viewEmployee()">View Registered Employees</button>
+          <button type="button" class="btn btn-link" (click)="viewEmployee()" *ngIf="this.form!=null">View Registered Employees</button>
         </div>
 </div>
 <br/><br/>
@@ -86,25 +80,6 @@
               </div>
               <br/><br/>
 
-              <ng-template #content let-c="close" let-d="dismiss">
-                  <div class="modal-header">
-                    <h4 class="modal-title" id="modal-basic-title">Delete Employee</h4>
-                    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <!-- employee list -->
-                  <div class="modal-body">
-                     <app-delete-employee></app-delete-employee>                             
-                    </div>
-
-                     <!-- end -->
-                  <div class="modal-footer">
-                      <small class="text-muted">
-                         
-                        </small>
-                    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Close</button>
-                  </div>
-                </ng-template>     
+                
               
   
